@@ -47,6 +47,11 @@ common: &default_settings
   # information separate from that of your application.  Specify its
   # log level here.
   log_level: info
+
+  # If you wish to override the location of the log file, you can
+  # uncomment this
+  # log_file_path: /var/log
+  # log_file_name: newrelic_agent.log
   
   # The newrelic agent communicates with the RPM service via http by
   # default.  If you want to communicate via https to increase
